crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__refusal_backend_unavailable.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "refusal": {
    "reason": "backend_unavailable",
    "message": "the required backend is not available",
    "requested_detail": "semantic"
  }
}
