crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__refusal_no_symbol.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "refusal": {
    "reason": "no_symbol_at_position",
    "message": "no symbol found at the requested position",
    "requested_detail": "structure"
  }
}
