crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__refusal_position_out_of_range.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "refusal": {
    "reason": "position_out_of_range",
    "message": "the requested position is outside the file bounds",
    "requested_detail": "structure"
  }
}
