crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__snapshot_minimal_card.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "card_version": 1,
  "symbol": {
    "symbol_id": "sym_abc123",
    "ref": {
      "uri": "file:///src/main.rs",
      "range": {
        "start": {
          "line": 10,
          "column": 0
        },
        "end": {
          "line": 42,
          "column": 1
        }
      },
      "language": "rust",
      "kind": "function",
      "name": "process_request"
    }
  },
  "provenance": {
    "extracted_at": "2026-03-03T12:34:56Z",
    "sources": [
      "tree_sitter"
    ]
  }
}
