crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__snapshot_refusal_not_implemented.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "refusal": {
    "reason": "not_yet_implemented",
    "message": "observe get-card: Tree-sitter card extraction is not yet implemented",
    "requested_detail": "structure"
  }
}
