crates/weaver-cards/src/tests/snapshots/weaver_cards__tests__snapshot_tests__snapshot_refusal_unsupported_language.snap
---
source: crates/weaver-cards/src/tests/snapshot_tests.rs
expression: json
---
{
  "status": "refusal",
  "refusal": {
    "reason": "unsupported_language",
    "message": "the requested language is not supported",
    "requested_detail": "structure"
  }
}
